--- a/style.css
+++ b/style.css
@@ -66,7 +66,6 @@ html{
     margin-right: 1rem;
     color: white;
     display: none;
-
 }
 
 .icons a{
@@ -75,10 +74,36 @@ html{
     padding: 1.5rem 3rem;
     font-size: 1.5rem;
     border-radius: 10px;
+    transition: .2s;
 }
 
 .icons a:hover{
     background: transparent;
     border: 1px solid var(--secclr);
-    
+
+}
+
+
+
+
+
+
+@media (max-width:767px) {
+
+    html{
+        font-size: 55%;
+    }
+    .header{
+        padding: 2rem;
+    }
+    .icons div{
+        display: initial;
+    }
+    .navbar{
+        position:absolute;
+        top:100%;
+        left:0;
+        width: 100%;
+        height: 100vh;
+    }
 }
